# python-inferno

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CMakeLists.txt  README.md  arm64_requirements.yaml  arm64_requirements_rpy2.yaml  requirements.yaml  requirements_rpy2.yaml  setup.cfg  setup.py
R/: gam.R
analysis/: analyse_optuna_trials.py  analyse_trials.py  antec_test.py  ba_histograms_cat.py  ba_model_analysis.py  calculate_ba.py  calculate_ba2.py  calculate_data_stats.py  calculate_monthly_ba.py  compare_dry_days.py  delta_sa.py  dream_test.py  estimate_dry_day_threshold.py  frac_vis.py  gam_analysis.py  gam_example.py  hdmr_sa.py  hyperopt.sh  interactive_dry_bal_optimisation.py  iter_opt_graph_plot.py  iterative_ba_model_opt.py  jules_leaf_litter_check.py  litter_pool_vis.py  load_data.py  lognorm.ipynb  lognorm.py  matplotlibrc  minimisation_settings.py  multi_gam_analysis.py  null_model_example.py  obs_fapar_comparison.py  optimise_ba_model_basinhopping.py  optimise_ba_model_brute.py  optimise_ba_model_hyperopt.py  optimise_ba_model_least_sq.py  optimise_ba_model_optuna.py  optimise_dry_bal_params.py  optuna.sh  pawn_sa.py  performance_test.py  (+25 more)
src/python_inferno/: __init__.py  ba_model.py  basinhopping.py  (+37 more)
tests/: __init__.py  conftest.py  test_ba_model.py  test_compare_metal_python_ba_model.py  test_corr_stats.py  test_hyperopt.py  test_iter_opt.py  test_iter_opt_perf.py  test_litter.py  test_mcmc.py  test_metrics.py  test_optuna.py  test_py_gpu_inferno.py  test_run.py  test_sensitivity_analysis.py  test_sympy_inferno.py  test_utils.py
(+14 files in other folders)
