[metadata]
license_files = LICENSE

[tool:pytest]
addopts =
    -n10
    --benchmark-sort=fullname
    --benchmark-autosave
    --doctest-modules
    --cov=python_inferno
    --ignore=analysis
    --ignore=examples
    --ignore=gpu_inferno
    -r a
    -v
markers =
    slow: mark a test as being very slow.
