[metadata]
license_files = LICENSE

[tool:pytest]
addopts =
    -n1
    --benchmark-sort=fullname
    --benchmark-autosave
    --benchmark-compare
    --doctest-modules
    --cov=python_inferno
    --ignore=analysis
    --ignore=examples
    --ignore=gpu_inferno
    -r a
    -v
markers =
    slow: mark a test as being very slow.
